    and (X)HTML conversion scripts to print out operator information.

    Applied several low-level optimizations to the Logtalk compiler/runtime.

    Moved the internal predicates that construct and access the predicate
    execution context from the compiler to the Prolog config files in order
    to support fine performance tuning that is Prolog compiler dependent.

    Updated the XSB config file in order to support the compilation of modules
    as objects. Added a definition for the missing setup_call_catcher_cleanup/4
    built-in predicate. XSB 3.3 (or a later version) is now required for
    compatibility with Logtalk.

    Updated the SWI-Prolog config file in order to provide limited support
    for the arithmetic_function/1 proprietary directive (arithmetic functions
    are compile as global instead of as local to the objects or categories
    defining them).

    Updated the YAP config file in order to ignore the style_check/1 directive
    and to interpret the yap_flag/2 directive as a set_prolog_flag/2 directive.

    Updated the "xml_parser" contribution in order to workaround portability
    issues with Qu-Prolog, SICStus Prolog, and XSB.

    Updated the "encodings" example in order to ensure that the there is no
    whitespace before the encoding/1 directive.

    Updated the "attvars" example in order to support B-Prolog and XSB. Also
    added support for using attributed variables within Logtalk parametric
    objects and parametric categories. Thanks to Jan Wielemaker, Vítor Santos
    Costa, and Bart Demoen for feedback and implementation suggestions.

    Updated the "profilers" example with preliminary support for the changes
    to execution profiling in the SICStus Prolog 4.2 version.

    Updated the "expansion" example with more sample code on how to combine
    term- and goal-expansion definitions from different hooks objects.

    Updated the "coinduction" example, adding an experimental keysort/2